# distortion-aware-brushing-backend

./: .gitignore  README.md  server.py  utils.cpp
cpp/: CMakeLists.txt  kde.cpp  kde.hpp  msq.cpp  reposition.cpp  test.cpp  test_msq.cpp
cpp/helper/: printKDE.hpp  printMSQ.hpp
src/: calculateMetric.py
